-1.0.2.10- * Fixed a error in the Raw Databases. * Added a Index.txt file, for when the database file index changers in a game update.

--- a/RL26 Database Editor/RL26 Database Editor.csproj
+++ b/RL26 Database Editor/RL26 Database Editor.csproj
@@ -13,18 +13,12 @@
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <Description>Edit the original Rugby League 26 Default Database.</Description>
     <Copyright>Wouldy Mods 2025</Copyright>
-    <AssemblyVersion>1.0.1.8</AssemblyVersion>
-    <FileVersion>1.0.1.8</FileVersion>
+    <AssemblyVersion>1.0.2.10</AssemblyVersion>
+    <FileVersion>1.0.2.10</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <Content Include="RL26.ico" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="System.Data.OleDb">
-      <HintPath>System.Data.OleDb.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
   <ItemGroup>
@@ -59,6 +53,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="defaultdata\playerdatabase_version.bin">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="File Index.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Logos\aus_jillaroos.pc.png">
@@ -902,9 +899,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Logos\unknown.pc.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="System.Data.OleDb.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
